--- a/everest.html
+++ b/everest.html
@@ -64,7 +64,8 @@
 			redirected to another activity if the guess is correct. It wouldn’t be right to call this a game without an element
 			of gamification, so I also implemented as scoring system and hints and also to improve usability the high and lower
 			guesses would also be displayed on the screen. For this application I learnt advantages of linear layout and how to
-			<span id="faq"></span>save the UI state with ‘onSaveInstance’ and how to prevent losing information when the screen is rotated. </p>
+			<span id="faq"></span>save the UI state with ‘onSaveInstance’ and how to prevent losing information when the screen
+			is rotated. </p>
 		<h1 class="w">Features (Getting Started FAQ)</h1>
 		<h3 style="color: orange">How to open Everest Web Browsing App on an Android device?</h3>
 		<p>Once the user has installed the application (APK file), the user should be able to press Everest Web Browser icon
@@ -84,7 +85,8 @@
 			external link is pressed, the browser will load the hyperlink webpage page on load.</p>
 		<h3 style="color: orange">Can I google search in the search bar? </h3>
 		<p>Yes, by inputting any text which does not start with https or http or any other active website URL (e.g.
-				<span id="feature"></span><br>nike.com), the text in the input search field would be converted into a google search. Some mathematical equations
+			<span id="feature"></span><br>nike.com), the text in the input search field would be converted into a google search.
+			Some mathematical equations
 			may not work.</p>
 		<h1 class="w">Features (App Navigation)</h1>
 		<dd>
@@ -189,9 +191,18 @@
 		</div>
 		<p>Android application is based on the 'Activity Lifecycle' and every time the device orientation changes, the
 			application will restart unless the state of the application has been saved. As I have programmed the app to save
-			<span id="reflection"></span><br>the state, this enables the device to change orientation without losing the information such as the current webpage
+			<span id="reflection"></span><br>the state, this enables the device to change orientation without losing the
+			information such as the current webpage
 			and will successfully reload the webpage. </p>
 		<h1 class="w">reflection</h1>
+		<p>Overall, I gain a comprehensive understanding of the WebView class, Android App bar with a search bar, intents,
+			layouts, listeners, custom list and layout versus activity. I am very pleased with this project and without a doubt
+			this has been one of my greatest challenges from an IT perspective. Even after several months, I am using this as my main web browser on my
+			smartphone and this because it is user friendly, has a aesthetically pleasing and simple UI as of the fully
+			integrated app bar. One thing I forgot to implement was a print function to print the content of the WebView which I
+			came across reading for another Android project. I one day hope to be a successful mobile application developer and
+			create application that one could only imagine and makes our life’s easier. </p>
+		<hr>
 		<a id="gitbutton" href="https://github.com/smeet-patel/oneWeb-browser-V-Everest" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
 	</div>
