--- a/mywork.html
+++ b/mywork.html
@@ -114,15 +114,15 @@
                         <img src="everest/everest_banner_MyWork.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Mobile Development</a>
+                        <a href="everest.html">Mobile Development</a>
                         <time>2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href=""></a>
+                           <a id="share" class="share-toggle share-icon" href="everest.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="">Everest Andriod Web Broswer </a></h3>
+                           <h3><a href="everest.html">Everest Andriod Web Broswer </a></h3>
                            <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing experience. My vision to become an Android developer. </p>
                            <br>
                         </article>
