--- a/centralPolice.html
+++ b/centralPolice.html
@@ -77,12 +77,13 @@
             managerial position and works full time. Secondary personas enable to enhance the usability for even for
             the user who has less exposure and experience with the system by catering for them with nice to have
             features. </p>
-            <div class="video-container" style="text-align: center;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoW8dyUQ7XIjdnlAH5GOdE2HPI2frf01okqvmqbIgjgaGWz9GeiAVJIDdzcsAqFQDuy0cPEsVj7_LK/embed?start=true&loop=true&delayms=3000"
-                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
+        <div class="video-container" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoW8dyUQ7XIjdnlAH5GOdE2HPI2frf01okqvmqbIgjgaGWz9GeiAVJIDdzcsAqFQDuy0cPEsVj7_LK/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
         <div id="wire"></div><br>
         <h1 class="w">Wireframes </h1>
+        <div style="margin: 0 auto;max-width: 800px; width: 100%;">
         <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
             interaction design. I used a sketchy GUI window style using an application called Pencil. Menus, buttons
             text fields and other elements are displayed which it made better easier to follow while developing the
@@ -99,37 +100,41 @@
             feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
             ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
             experience and interaction for the prototype.</p>
-            <div class="video-container1" style="text-align: center;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRKb75Ro6Dl8gpPhkhzf1FkkJZHmIUnG086UuVQhAPmr7djTMzRv9ixjb5s866QTX-INVPIM64n3dSK/embed?start=true&loop=true&delayms=2000"
-                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
+        </div>
+        <div class="video-container1" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRKb75Ro6Dl8gpPhkhzf1FkkJZHmIUnG086UuVQhAPmr7djTMzRv9ixjb5s866QTX-INVPIM64n3dSK/embed?start=true&loop=true&delayms=2000"
+                frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
         <!-- <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"> -->
         <div id="proto"></div><br>
         <h1 class="w">Prototype </h1>
-        <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Login for with 'tab' functionality (accelerator feature).</p>
-        <img src="centralpolice/newjobcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>A landing page for Central Police which the user can answer calls or remove an entry from their incoming
-            list. </p>
-        <img src="centralpolice/filledformcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Answering the first call and the officer fills out the details and incident desperation as they ask the
-            questions. </p>
-        <img src="centralpolice/linkedcall.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The details of the incident appear to be familiar to the user. This call will be marked as repeat calls as
-            can be linked and filtered suburb. </p>
-        <img src="centralpolice/linkformaction.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/mappagestart.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>After the form has been filled out the user can 'go to dispatch.' The user can view the location of the
-            incident to dispatch units. </p>
-        <img src="centralpolice/dispatch.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The officer dispatches the closest unit available. The displays the real-time tracking of the unit
-            dispatched and where they are to guide them if necessary.</p>
-        <img src="centralpolice/findrecord.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>Filtering records by typing into the search bar to match any detail displayed in the row. From this screen
-            the user able to select the row and change the status of the incident. </p>
-        <img src="centralpolice/otherrecords.png" alt="" class="cenimg" style="max-width: 800px"><br>
-        <p>The current screen displays the details of all the unit and incidents. </p>
-
+        <div style="margin: 0 auto;max-width: 800px; width: 100%;">
+            <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>Login for with 'tab' functionality (accelerator feature).</p>
+            <img src="centralpolice/newjobcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>A landing page for Central Police which the user can answer calls or remove an entry from their incoming
+                list. </p>
+            <img src="centralpolice/filledformcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>Answering the first call and the officer fills out the details and incident desperation as they ask the
+                questions. </p>
+            <img src="centralpolice/linkedcall.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>The details of the incident appear to be familiar to the user. This call will be marked as repeat calls
+                as
+                can be linked and filtered suburb. </p>
+            <img src="centralpolice/linkformaction.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/mappagestart.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>After the form has been filled out the user can 'go to dispatch.' The user can view the location of the
+                incident to dispatch units. </p>
+            <img src="centralpolice/dispatch.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>The officer dispatches the closest unit available. The displays the real-time tracking of the unit
+                dispatched and where they are to guide them if necessary.</p>
+            <img src="centralpolice/findrecord.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>Filtering records by typing into the search bar to match any detail displayed in the row. From this
+                screen
+                the user able to select the row and change the status of the incident. </p>
+            <img src="centralpolice/otherrecords.png" alt="" class="cenimg" style="max-width: 800px"><br>
+            <p>The current screen displays the details of all the unit and incidents. </p>
+        </div>
         <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
             Central Police Prototype</a>
     </div>
