--- a/mywork.html
+++ b/mywork.html
@@ -569,8 +569,7 @@
                         <a id="share" class="share-toggle share-icon" href="#"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">Central
-                              Police</a></h3>
+                        <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">My Bank</a></h3>
                         <p>Implementing a banking system in two different languages. </p>
                      </article>
                   </div>
