--- a/mywork.html
+++ b/mywork.html
@@ -209,6 +209,30 @@
                </div>
             </div>
          </div>
+         <div class="child">
+               <div class="wrapper">
+                  <div class="card radius shadowDepth1">
+                     <div class="card__image border-tlr-radius">
+                        <img src="projects/Hackathon/hackathonprojectpicture.png" alt="WLG Science Hackathon 2018 solution"
+                           class="border-tlr-radius">
+                     </div>
+                     <div class="card__meta">
+                        <a href="hackathon.html">Web Dev</a>
+                        <time>6 & 7 Dec 2018</time>
+                     </div>
+                     <div class="card__content card__padding">
+                        <div class="card__share">
+                           <a id="share" class="share-toggle share-icon" href="hackathon.html"></a>
+                        </div>
+                        <article class="card__article">
+                           <h3><a href="hackathon.html">WLG Science Hackathon 2018</a></h3>
+                           <p>I participated in a Hackathon which brought together a group of individuals from different
+                              IT backgrounds to achieve a high-level end solution for college students.</p>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+            </div>
          <!-- <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
@@ -392,29 +416,6 @@
    <div class="containerWork">
       <h1>Project to complete</h1>
       <div class="parent parent2">
-            <div class="child">
-                  <div class="wrapper">
-                     <div class="card radius shadowDepth1">
-                        <div class="card__image border-tlr-radius">
-                           <img src="projects/Hackathon/hackathonprojectpicture.png" alt="WlG Science Hackathon 2018 solution" class="border-tlr-radius">
-                        </div>
-                        <div class="card__meta">
-                           <a href="#">Web Dev</a>
-                           <time>6 & 7 Dec 2018</time>
-                        </div>
-                        <div class="card__content card__padding">
-                           <div class="card__share">
-                              <a id="share" class="share-toggle share-icon" href="#"></a>
-                           </div>
-                           <article class="card__article">
-                              <h3><a href="#">WlG Science Hackathon 2018</a></h3>
-                              <p>In team a designing & developing JavaFX application for Conway's Game of Life. Facing
-                                 challenges with git lab and merge conflicts.</p>
-                           </article>
-                        </div>
-                     </div>
-                  </div>
-               </div>
          <div class="child">
             <div class="wrapper">
                <div class="card radius shadowDepth1">
@@ -569,7 +570,8 @@
                         <a id="share" class="share-toggle share-icon" href="#"></a>
                      </div>
                      <article class="card__article">
-                        <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">My Bank</a></h3>
+                        <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">My
+                              Bank</a></h3>
                         <p>Implementing a banking system in two different languages. </p>
                      </article>
                   </div>
@@ -603,15 +605,15 @@
       </div>
    </div>
 
-      <footer class="footer">
-         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
-         <div class="container text-center">
-            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-         </div>
-      </footer>
+   <footer class="footer">
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+      <div class="container text-center">
+         <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+         <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+         <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+         <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+      </div>
+   </footer>
 </body>
 
 </html>
