Final update of the year

--- a/hackathon.html
+++ b/hackathon.html
@@ -123,6 +123,7 @@
 		<li>To display the periodic table, I created a table with 9 row and 18 columns with buttons inside them. </li>
 		<li>I created the periodic table to be responsive for devices such as tables and anything larger. Because of
 			the number of elements in the table, it is not ideal to use on a smartphone. </li>
+		<img src="projects/Hackathon/table.png" class="cenimg" style="max-width: 800px"><br>
 		<li>All element buttons display an atomic number and letter symbol. Elements have also been coloured coded
 			based on the type of element, such as metals and non-metals. </li>
 		<li>On hover of an element the element name would display and when click a discption of the element is
@@ -132,8 +133,14 @@
 			current element as variable and compare it with the following element and count the amount of time an element has
 			been press consecutively. If the element changes the counter resets the string builds on. I also had to create a
 			regex which removes and rewrites the pervious element with added number if element was the same. </li>
+		<img src="projects/Hackathon/gamefinished.png" class="cenimg" style="max-width: 800px"><br>
 		<li>Another challenge was creating the periodic table because it was a tedious task.  </li>
-
+		<br>
+		<hr>
+		<a id="butproto" href="https://smeet-patel.github.io/hackathon/" target="_blank">View
+			the Smart Science Platform</a><br>
+		<a id="gitbutton" href="https://github.com/smeet-patel/hackathon" target="_blank"><i class="fa">&#xf09b;</i>
+			Open Project on GitHub (Source Code)</a>
 	</div>
 	<br>
 	<!-- footer ------------------------------>
