--- a/mywork.html
+++ b/mywork.html
@@ -413,7 +413,7 @@
       </div>
    </div>
 
-   <div class="containerWork">
+   <!-- <div class="containerWork">
       <h1>Project to complete</h1>
       <div class="parent parent2">
          <div class="child">
@@ -603,7 +603,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
 
    <footer class="footer">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
