--- a/mywork.html
+++ b/mywork.html
@@ -92,7 +92,7 @@
                <div class="card radius shadowDepth1">
                   <div class="card__image border-tlr-radius">
                      <!-- 2shakes project ------------------------------>
-                     <img src="cp1.png" alt="Central Police dashboard" class="border-tlr-radius">
+                     <img src="pictures/cp1.png" alt="Central Police dashboard" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
                      <a href="centralPolice.html">UI / UX</a>
@@ -166,7 +166,7 @@
                <div class="card radius shadowDepth1">
                   <div class="card__image border-tlr-radius">
                      <!-- Sports world ------------------------------>
-                     <img src="sportsWorld.jpeg" alt="Sports World login page" class="border-tlr-radius">
+                     <img src="pictures/sportsWorld.jpeg" alt="Sports World login page" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
                      <a href="#">Web Development</a>
