--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="SmeetBanner.png" alt="Smeet" class="cenBanner">
+    <img src="Webimages/mybanner2.PNG" alt="Smeet" class="cenBanner">
     <img src="myAvatar.jpg" alt="Smeet" class="cenBanner1">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center">I am passionate about web and mobile development. 
         I am a travel enthusiast. An aspiring software developer.</p>
