--- a/myblog.html
+++ b/myblog.html
@@ -33,7 +33,7 @@
     <div class="sticky">
         <nav class="shift">
             <ul>
-                <li><a href="#" onclick="bali()">Traveler Guide</a></li>
+                <li><a href="#" onclick="bali()">Traveller Guide</a></li>
                 <!-- <li><a href="#loadblog" onclick="mel()" class="pronav">Melbourne</a></li> -->
                 <li><a href="https://smeet-patel.github.io/Launchpadreview.html" title="Agile UX Designer Influence">Launchpad</a></li>
             </ul>
@@ -46,7 +46,7 @@
     </div>
     <!-- Map and instructions ------------------------------>
     <div class="centerWrap">
-        <h1 class="w">Traveler Guide</h1>
+        <h1 class="w">Traveller Guide</h1>
         <div id="map"></div>
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
 				frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe> -->
@@ -105,7 +105,7 @@
             strengths and weaknesses, the three days helped me conclude why year in year out Melbourne is awarded the
             title of “The World’s Most Livable City”.
         </p>
-        <img src="b1.jpg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
+        <img src="pictures/b1.jpg" alt="Melbourne" class="cenimg" style="max-width: 800px"><br>
         <p><b>Food specialities: </b> world famous Coffee, multi-cultural cuisine and rooftop bar hopping</p>
         <p><b>Attractions: </b> Catch a sports game at the MCG, walk around the CBD and don’t miss the alleyways
             littered with street art, walk along the Yarra river and take in Melbourne come to life at night and watch
@@ -114,6 +114,7 @@
         <p><b>Tips: </b>Catch Skybus from and to Airport, the expensive eateries aren’t always the best, walk or catch
             the tram around the CBD
         </p>
+        <img src="blog/MCGgame.jpg" alt="AFL game at MCG" class="cenimg" style="max-width: 800px">
     </div>
     <div class="centerWrap" id="singBlog" style="display: none;">
         <!-- Signapore blog -->
