--- a/mybank.html
+++ b/mybank.html
@@ -2,153 +2,121 @@
 <html>
 
 <head>
-	<title>WLG Science Hackathon 2018</title>
-	<!-- Stylesheets ------------------------------>
-	<link rel="stylesheet" type="text/css" href="CSS/project.css">
-	<!-- My my mini icon ------------------------------>
-	<link rel="icon" href="spMini.png">
-	<!-- Make the scale of screen to 1 to device ------------------------------>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>WLG Science Hackathon 2018</title>
+    <!-- Stylesheets ------------------------------>
+    <link rel="stylesheet" type="text/css" href="CSS/project.css">
+    <!-- My my mini icon ------------------------------>
+    <link rel="icon" href="spMini.png">
+    <!-- Make the scale of screen to 1 to device ------------------------------>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 
 <body>
-	<!-- nav bar ------------------------------>
-	<div class="nav1" id="mynav1">
-		<a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-		<!-- <a href="mycon.html">CONTACT</a> -->
-		<a href="myblog.html">BLOG</a>
-		<a href="mywork.html">MY WORK</a>
-		<a href="aboutme.html">ABOUT ME</a>
-		<a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-	</div>
-	<br>
-	<!-- banner  ------------------------------>
-	<img src="projects/myBank/myBankBanner.PNG" alt="dimmu Burger" class="cenBanner">
-	<img src="projects/myBank/my bank banner.png" alt="dimmu Burger" class="cenBannersquare">
-	<div class="sticky">
-		<nav class="shift">
-			<ul>
-				<li><a href="#overview">Overview</a></li>
-				<li><a href="#faq">Day 1</a></li>
-				<li><a href="#feature">Day 2</a></li>
-				<li><a href="#reflection">Final Outcome</a></li>
-			</ul>
-		</nav>
-		<div class="progress-container">
-			<div class="progress-bar" id="myBar"></div>
-		</div>
-	</div>
-	<span id="overview"></span>
-	<br>
-	<div class="centerWrap">
-		<!-- project link button -->
-		<a id="gitbutton" href="https://github.com/smeet-patel/banking-systerm-in-2-programing-langages-" target="_blank"><i class="fa">&#xf09b;</i>
-			Open Project on GitHub (Source Code)</a>
-		<p>This Hackathon was an in collaboration with various secondary college around Wellington, Business Analysis,
-			UX designer and Software Developer like me. Various professional from corporate organisations such as
-			Deloitte, Xero, Datacom and Microsoft as were there as mentors to observe and help teams in projects. </p>
-		<h3 style="color: orange">First task: Identifying barriers to learning science. </h3>
-		<div style="margin: 0 auto;max-width: 800px; width: 100%;">
-			<div class="hoverOverImage">
-				<img src="projects/Hackathon/hackathonbrainstrom.jpg" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
-				<div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">Brainstorm the barriers to learning science.</div>
-				</div>
-			</div>
-			<p>Brainstorm with college students and other participants.</p>
-		</div>
-		<h3 style="color: orange">Second task: Develop a project brief for a digital solution to address a science
-			barrier. </h3>
-		<p>At this stage the participants were asked to choose a topic which we would like to solve and form a team
-			with a combination of college students and various participants with different expertise. </p>
-		<p>The topic I choose “Information not being provided in an interesting way” because I believed this topic
-			would have the most creativity and would be able a quality user experience.</p>
-		<h3 style="color: orange">Team Formation </h3>
-		<p><b>Team Name </b>: Four toed sloth (Named by Ryan, the college student)</p>
-		<p><b>Members </b>: Callum & Smeet (Software developers), Ryan Eagles From (Wellington Girls College) and 2
-			Business analysists.</p>
-		<h1 class="w">Day 1</h1>
-		<p>We had two deadlines to work towards which the first deliverable was to present our project concept to a
-			couple of the other teams. The second deliverable was to present the final solution, based on the user
-			experience, level of innovation and how well we responded to the brief. </p>
-		<h3 style="color: orange">Challenges of coming up with a project idea.</h3>
-		<p><b>Chosen Problem: </b>Information is not being provided in an interesting way for college students.</p>
-		<p>We had an enthusiastic from Student Ryan from Wellington Girls College who had a board interest in
-			science and mention that their college was governed by may strict rules, which meant they weren’t able
-			to carry out science-based experiments to class injuries. </p>
-		<p>Coming up with a project concept proved to be quite challenging because topic was quite board.</p>
-		<p>Using my systems analysis interviewing and requirements gather knowledge which learnt during my
-			undergraduate degree, I was able to successfully able to help the team find the problem. </p>
-		<h3 style="color: orange">The 5 Whys?</h3>
-		<img src="projects/Hackathon/The5Whys.jpg" class="cenimg" style="max-width: 800px"><br>
-		<p>I decided to use the ‘5 Whys’ with Ryan to understand the issues more in depth. </p>
-		<p>I asked Ryan<B> “why do you think information is not being provided in an interesting way?”</B></p>
-		<p>1: Because we are not allowed to carry out particles. </p>
-		<p><b>Why? </b>2: Because a girl in my class burnt her hand in the blue flame. We not allowed do anything in
-			the lab.</p>
-		<p><b>Why? </b>3: Therefore, we learn the theory for books.</p>
-		<p><b>Why? </b>4: And No one like to read for 40 minutes.</p>
-		<p><b>Why? </b>5: It is boring, and I don’t learn off that.</p>
-		<h3 style="color: orange">Solution</h3>
-		<p>To solve this problem, we decided to create an interest science platform, that allows science students like
-			Ryan to learn the theory of interesting videos and having an interesting simulation. </p>
-		<h3 style="color: orange">Concept Presentation</h3>
-		<div class="video-container1" style="text-align: center;">
-			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQZGFTYEo3s6KXXaUW9IOYyNH49WiXOghuMLvAjswsdolC5xwidcg6WPcJRdx9NACMbcw12lojxBJUe/embed?start=true&loop=true&delayms=3000"
-			 frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-		</div>
-		<p>Based on the comments we received from the mentors we realise that we needed to cut down on our scope
-			because we don’t have much time and possibly just focus on something simple. We decided to make a basic
-			periodic table game. </p>
-		<h1 class="w">Day 2</h1>
-		<p>For the second day we had to create and present our solution. In the team, I was the only team member who
-			has experience in web development. Callum made an accessibility keyboard for people with disabilities and
-			gathered resources for the web application such the images and element combination to make the product. The
-			two Business analyst was late and came after mid-day. They where tasked to change my original slides from
-			day 1 for the final presentation. </p>
-		<h3 style="color: orange">Smart Science Platform menu</h3>
-		<img src="projects/Hackathon/hackathonHome.png" class="cenimg" style="max-width: 800px"><br>
-		<p>To represent the different topic and modules I created side navigation which student would be able to access
-			other science simulations which have been made available by the student's teacher. The teacher would be
-			able to track their student progress and parent would also be able to track their child's progress. </p>
-		<h3 style="color: orange">Development of the Web App.</h3>
-		<p>Because of the shortage of both time and skills. The team had started researching ideals for and game
-			implementation the day before. Callum started reaching into any periodic table which we could have used
-			from the internet by all had proven to be difficult because the table has a lot of elements, so it was
-			difficult to use any. </p>
-		<li>To display the periodic table, I created a table with 9 row and 18 columns with buttons inside them. </li>
-		<li>I created the periodic table to be responsive for devices such as tables and anything larger. Because of
-			the number of elements in the table, it is not ideal to use on a smartphone. </li>
-		<img src="projects/Hackathon/table.png" class="cenimg" style="max-width: 800px"><br>
-		<li>All element buttons display an atomic number and letter symbol. Elements have also been coloured coded
-			based on the type of element, such as metals and non-metals. </li>
-		<li>On hover of an element the element name would display and when click a discption of the element is
-			displayed above the table. </li>
-		<h3 style="color: orange">Challenges</h3>
-		<li>Devlopeing the game logic to create the formula was the most difficult challenge. I resloved this as I stored the
-			current element as variable and compare it with the following element and count the amount of time an element has
-			been press consecutively. If the element changes the counter resets the string builds on. I also had to create a
-			regex which removes and rewrites the pervious element with added number if element was the same. </li>
-		<img src="projects/Hackathon/gamefinished.png" class="cenimg" style="max-width: 800px"><br>
-		<li>Another challenge was creating the periodic table because it was a tedious task.  </li>
-		<br>
-		<hr>
-		<a id="gitbutton" href="https://github.com/smeet-patel/banking-systerm-in-2-programing-langages-" target="_blank"><i class="fa">&#xf09b;</i>
-			Open Project on GitHub (Source Code)</a>
-	</div>
-	<br>
-	<!-- footer ------------------------------>
-	<footer class="footer">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
-		<div class="container text-center">
-			<a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-			<a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-			<a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-			<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-		</div>
-	</footer>
+    <!-- nav bar ------------------------------>
+    <div class="nav1" id="mynav1">
+        <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
+        <a href="myblog.html">BLOG</a>
+        <a href="mywork.html">MY WORK</a>
+        <a href="aboutme.html">ABOUT ME</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
+    </div>
+    <br>
+    <!-- banner  ------------------------------>
+    <img src="projects/myBank/myBankBanner.PNG" alt="dimmu Burger" class="cenBanner">
+    <img src="projects/myBank/my bank banner.png" alt="dimmu Burger" class="cenBannersquare">
+    <div class="sticky">
+        <nav class="shift">
+            <ul>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#python">Python</a></li>
+                <li><a href="#cprograming">C#</a></li>
+                <li><a href="#summary">Summary</a></li>
+            </ul>
+        </nav>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+    </div>
+    <span id="overview"></span>
+    <br>
+    <div class="centerWrap">
+        <!-- project link button -->
+        <a id="gitbutton" href="https://github.com/smeet-patel/banking-systerm-in-2-programing-langages-" target="_blank"><i
+                class="fa">&#xf09b;</i>
+            Open Project on GitHub (Source Code)</a>
+        <p>I wanted to explore python and C# programming languages by creating two almost identical console base
+            banking system application with simple features such as adding a new customer and account, deleting a
+            record, modifying details, and bankers can look the records of all customers. As well as transferring
+            payments from one customer to another, clearing and accepting a cheque. Also, for python, I made a
+            real-time currency conversion using APIs. </p>
+        <p>The design of the application was designed to allow the user to input a number which corresponds to a
+            certain user for example 1 for ‘new customer’, 2 for ‘existing customer’ and 3 for ‘banker’. Depending on
+            the selected input, the user would get other options to complete the task as mentioned above. If the user
+            was a new user, they are required to input their personal details to create their bank account. </p>
+        <p>The reason I choose Python and C# programming languages was due to the popularity of the languages in the IT
+            <span id="python"></span>
+            industry and this is evident in a recent article related to GitHub usage (they are 3rd and 6th most used
+            languages respectively). </p>
+        <h1 class="w">Python</h1>
+        <li>Overall, python was more natural to learn and was unique as it was different to JAVA or C# and had no curly
+            braces, therefore correctly indenting the code was crucial. </li>
+        <li>Python was easier to implement the APIs in JSON format and works better with most data types. </li>
+        <li>I learnt that I had to cast numeric values input into int or float when storing or programming mathematical
+            operation. For example, 2+1 would be 21 instead of equalling to 3 while using string type. </li>
+        <li>One of the challenges in python was trying to access a global variable inside a function. To solve the
+            issues, I had to insert ‘global’ before the variable inside the function. </li>
+        <li>For my data structure, I used a nested dictionary because it enabled me to set up a data structure like a
+            HashMap in Java and therefore it allowed me to store the customer number ID as key and the other
+            information for that customer number along aside it. </li>
+        <li>I was also able to implement a real time currency conversion calculator from one currency to another by
+            accessing a JSON file online. This was possibly my biggest challenge in python as I had to convert
+            retrieving the exchange rate and program the operations. </li>
+        <li>One of the programming elements I did compromise in this python version having a type check had implemented
+            in my C# version. </li>
+        <li>Also, for the currency converter, it would have been ideal to store a list of all the currency code so the
+            if the user enters an invalid, they asked to enter a valid currency code to proceed. </li>
+        <li>Overall, I really Enjoyed programming in python and in the future, I would use Python for machine learning
+            <span id="cprograming"></span>
+            projects and participate in Kaggle competitions, where python is used because it is more powerful when
+            constructing mathematical models and creating algorithms.</li>
+        <h1 class="w">C#</h1>
+        <li>After developing the application in Python, I chose to build the application in C# which was similar to
+            Java because it is an object-oriented language and is Microsoft responses to Java.</li>
+        <li>C# has some subtle differences such as the main method, declaring constants, foreach statements, print
+            statements for system.out. Print vs. Console.Writeline for C#.</li>
+        <li>In C# I also wrote multiple classes in a single file, which proved to adventurous while creating the custom
+            class object for the list because I was able to match the variable better the switching file while
+            programming. </li>
+        <li>The basic principles for C# were similar to JAVA and writing and reading from the console was the more
+            preferred way for me (rather than having a scanner), but I struggled using a list in C# because of the
+            custom class object and writing the setter and getter because it was different to JAVA.</li>
+        <span id="summary"></span>
+        <li>One of extension for python was the exchange rate converter, which I did not implement because of time
+            constraints and complexity. </li>
+        <h1 class="w">Summary </h1>
+        <p>Overall, Python was more straightforward to learn and is instantaneous or faster for development. While in
+            C# the program needs a main method to run the application. Most of my skills in Java were transferable to
+            C# because they are both object orientated programming languages. For more extensive and visual application
+            - C# would be more preferred, while, for data or mathematical application python would be more suitable.</p>
+        <hr>
+        <a id="gitbutton" href="https://github.com/smeet-patel/banking-systerm-in-2-programing-langages-" target="_blank"><i
+                class="fa">&#xf09b;</i>
+            Open Project on GitHub (Source Code)</a>
+    </div>
+    <br>
+    <!-- footer ------------------------------>
+    <footer class="footer">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+        <div class="container text-center">
+            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
