Updating the order in my work and adding my bank to the list of projects

--- a/mybank.html
+++ b/mybank.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>WLG Science Hackathon 2018</title>
+    <title>My Bank | Project</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
