--- a/mywork.html
+++ b/mywork.html
@@ -91,6 +91,56 @@
             <div class="wrapper">
                <div class="card radius shadowDepth1">
                   <div class="card__image border-tlr-radius">
+                     <!-- Cyber CV 2015 ------------------------------>
+                     <img src="projects/everest/everest_banner_MyWork.png" alt="Everest" class="border-tlr-radius">
+                  </div>
+                  <div class="card__meta">
+                     <a href="everest.html">Mobile Development</a>
+                     <time>2018</time>
+                  </div>
+                  <div class="card__content card__padding">
+                     <div class="card__share">
+                        <a id="share" class="share-toggle share-icon" href="everest.html"></a>
+                     </div>
+                     <article class="card__article">
+                        <h3><a href="everest.html">Everest Andriod Web Broswer </a></h3>
+                        <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing
+                           experience. My vision to become an Android developer. </p>
+                        <br>
+                     </article>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="child">
+            <div class="wrapper">
+               <div class="card radius shadowDepth1">
+                  <div class="card__image border-tlr-radius">
+                     <!-- Cyber CV 2015 ------------------------------>
+                     <img src="projects/myBank/myBankMyworkpicture.PNG" alt="My Bank" class="border-tlr-radius">
+                  </div>
+                  <div class="card__meta">
+                     <a href="mybank.html">Python and C#</a>
+                     <time>2018</time>
+                  </div>
+                  <div class="card__content card__padding">
+                     <div class="card__share">
+                        <a id="share" class="share-toggle share-icon" href="mybank.html"></a>
+                     </div>
+                     <article class="card__article">
+                        <h3><a href="mybank.html">My Bank </a></h3>
+                        <p>My bank is a banking system application in Python and C# that has basic transactional
+                           features and uses APIs for currency conversion.</p>
+                        <br>
+                     </article>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="child">
+            <div class="wrapper">
+               <div class="card radius shadowDepth1">
+                  <div class="card__image border-tlr-radius">
                      <!-- 2shakes project ------------------------------>
                      <img src="pictures/cp1.png" alt="Central Police dashboard" class="border-tlr-radius">
                   </div>
@@ -106,31 +156,6 @@
                         <h3><a href="centralPolice.html">Central Police</a></h3>
                         <p>Central police a real-time dashboard to help the policing department in Wellington to
                            respond to calls, reporting the incident and deploying resources.</p>
-                     </article>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="child">
-            <div class="wrapper">
-               <div class="card radius shadowDepth1">
-                  <div class="card__image border-tlr-radius">
-                     <!-- Cyber CV 2015 ------------------------------>
-                     <img src="projects/everest/everest_banner_MyWork.png" alt="creating my website" class="border-tlr-radius">
-                  </div>
-                  <div class="card__meta">
-                     <a href="everest.html">Mobile Development</a>
-                     <time>2018</time>
-                  </div>
-                  <div class="card__content card__padding">
-                     <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="everest.html"></a>
-                     </div>
-                     <article class="card__article">
-                        <h3><a href="everest.html">Everest Andriod Web Broswer </a></h3>
-                        <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing
-                           experience. My vision to become an Android developer. </p>
-                        <br>
                      </article>
                   </div>
                </div>
@@ -165,30 +190,6 @@
             <div class="wrapper">
                <div class="card radius shadowDepth1">
                   <div class="card__image border-tlr-radius">
-                     <!-- Sports world ------------------------------>
-                     <img src="pictures/sportsWorld.jpeg" alt="Sports World login page" class="border-tlr-radius">
-                  </div>
-                  <div class="card__meta">
-                     <a href="#">Web Development</a>
-                     <time>Oct 2018</time>
-                  </div>
-                  <div class="card__content card__padding">
-                     <div class="card__share">
-                        <a id="share" class="share-toggle share-icon" href="sportsWorld.html"></a>
-                     </div>
-                     <article class="card__article">
-                        <h3><a href="sportsWorld.html">Sports World</a></h3>
-                        <p>A web-project using the five languages (HTML, CSS, Javascript and PHP with MariaDB which
-                           uses SQL) over 3 days. Refreshing and expanding my web-dev skills.</p>
-                     </article>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="child">
-            <div class="wrapper">
-               <div class="card radius shadowDepth1">
-                  <div class="card__image border-tlr-radius">
                      <img src="projects/fansite/fansitenav.png" alt="Pair programming and leading" class="border-tlr-radius">
                   </div>
                   <div class="card__meta">
@@ -210,24 +211,48 @@
             </div>
          </div>
          <div class="child">
+            <div class="wrapper">
+               <div class="card radius shadowDepth1">
+                  <div class="card__image border-tlr-radius">
+                     <img src="projects/Hackathon/hackathonprojectpicture.png" alt="WLG Science Hackathon 2018 solution"
+                        class="border-tlr-radius">
+                  </div>
+                  <div class="card__meta">
+                     <a href="hackathon.html">Web Dev</a>
+                     <time>6 & 7 Dec 2018</time>
+                  </div>
+                  <div class="card__content card__padding">
+                     <div class="card__share">
+                        <a id="share" class="share-toggle share-icon" href="hackathon.html"></a>
+                     </div>
+                     <article class="card__article">
+                        <h3><a href="hackathon.html">WLG Science Hackathon 2018</a></h3>
+                        <p>I participated in a Hackathon which brought together a group of individuals from different
+                           IT backgrounds to achieve a high-level end solution for college students.</p>
+                     </article>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
-                        <img src="projects/Hackathon/hackathonprojectpicture.png" alt="WLG Science Hackathon 2018 solution"
-                           class="border-tlr-radius">
+                        <!-- Sports world ------------------------------>
+                        <img src="pictures/sportsWorld.jpeg" alt="Sports World login page" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="hackathon.html">Web Dev</a>
-                        <time>6 & 7 Dec 2018</time>
+                        <a href="#">Web Development</a>
+                        <time>Oct 2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="hackathon.html"></a>
+                           <a id="share" class="share-toggle share-icon" href="sportsWorld.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="hackathon.html">WLG Science Hackathon 2018</a></h3>
-                           <p>I participated in a Hackathon which brought together a group of individuals from different
-                              IT backgrounds to achieve a high-level end solution for college students.</p>
+                           <h3><a href="sportsWorld.html">Sports World</a></h3>
+                           <p>A web-project using the five languages (HTML, CSS, Javascript and PHP with MariaDB which
+                              uses SQL) over 3 days. Refreshing and expanding my web-dev skills.</p>
                         </article>
                      </div>
                   </div>
