MAJOR UPDATE. Conways completed and wlg transportation coming.
Full day commit

--- a/CyberCV.html
+++ b/CyberCV.html
@@ -47,15 +47,16 @@
         <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
             target="_blank">View
             My Cyber CV (2015)</a>
-        <p>As apart of Information System 101 course in 2015 VuW, We were a project to develop Cyber CV using basic
+        <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were tasked to developed a 
+            Cyber CV using basic
             HTML and CSS. We were asked, 'Where do you see yourself in 3 years' time?'</p>
-        <p>For this project, the object was learnt to use the proper HTML structure with the DOCTYPE, HEAD, body tag
+        <p>For this project, the objective was to use the proper HTML structure with the DOCTYPE, HEAD, body tag
             and nesting tags. I was also required to use external CSS page, use of lists, a navigation
             bar which redirects to other HTML pages, embed a video and display images. </p>
         <h2>Requirements: </h2>
         <li id="pb">Personal statement on the index page.</li>
         <li id="pb">Interest and hobbies section.</li>
-        <li id="pb">Education and qualification section.</li>
+        <li id="pb">Education and Fictional qualification section.</li>
         <li id="pb">Fictional contact details and reference. </li>
         <h3 style="color: orange">Personal objective:</h3>
         <span id="dev"></span>
@@ -67,7 +68,7 @@
     <div class="centerWrap">
         <h1 class="w">Development</h1>
         <h3 style="color: orange">Phase 1 planning the Website </h3>
-        <p><b>Colour:</b> It would make sense if I didn't use my favourite colour. Greenery (brighter tone of green),
+        <p><b>Colour:</b> It would not make sense if I didn't use my favourite colour. Greenery (brighter tone of green),
             is often associated with nature and has a relaxation effect. <br>My accent colour was a lighter tone of
             blue because it appears to be a colour which does not only look professional but sets a calmness and people
             trust the colour in a business sense. <br>For the text, I used Black and light grey for the background to
@@ -90,10 +91,12 @@
         <li>The navigation bar with image person icon was a challenge to get it aligned with the other elements.
             Learning how to use an external CSS file for styling was a challenge. </li>
         <li>For the project, We used Notepad++ as a text editor that had limited capabilities compared Visual Stuiod
-            code. <span id="end"></span>Checking for correct nesting proved to be difficult, and I often did not close tags, which was
+            code. <span id="end"></span>Checking for correct nesting proved to be difficult, and I often did not close
+            tags, which was
             causing problems. </li>
-        
+
         <h1 class="w">End Product</h1>
+        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact details and work Experience at New World and Xero)</b></p>
         <div class="hoverOverImage">
             <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
                 style="width:100%">
@@ -117,6 +120,7 @@
                 <div class="hoverOverImage-text">Work Experience and Education (MY Cyber CV 2015)</div>
             </div>
         </div>
+        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact details and work Experience at New World and Xero)</b></p>
         <p>Work Experience Page</p>
         <div class="hoverOverImage">
             <img src="projects/CyberCV/cv4.png" alt="Interest & hobbies + reference (My CYBER CV 2015)" class="hoverOverImage-layer_bottom"
