--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -44,8 +44,10 @@
     </div>
     <div class="centerWrap">
         <!-- project link button -->
-        <a id="butproto" href="https://smeet-patel.github.io/Fan-Site-VK/" target="_blank">View
-            Virat Kolhi's Fansite 2015</a>
+        <a id="butproto" href="http://smeet-patel.com/Fan-Site-VK/" target="_blank">View
+            Virat Kolhi's Fansite 2015</a><br>
+        <a id="gitbutton" href="https://github.com/smeet-patel/Fan-Site-VK" target="_blank"><i class="fa">&#xf09b;</i>
+            Open Project on GitHub (Source Code)</a>
         <p>The purpose of this project was to create a user-friendly and professional looking fan site for Virat
             Kolhi. </p>
         <p>For my <u>previous project</u>, I learnt to use the proper HTML structure with the DOCTYPE, HEAD, body tag
@@ -169,8 +171,11 @@
             <li id="pb">Virat Kolhi fan site social media feed.</li>
         </div>
         <hr>
-        <a id="butproto" href="https://smeet-patel.github.io/Fan-Site-VK/" target="_blank">View
-            Virat Kolhi's Fansite 2015</a>
+        <!-- project link button -->
+        <a id="butproto" href="http://smeet-patel.com/Fan-Site-VK/" target="_blank">View
+            Virat Kolhi's Fansite 2015</a><br>
+        <a id="gitbutton" href="https://github.com/smeet-patel/Fan-Site-VK" target="_blank"><i class="fa">&#xf09b;</i>
+            Open Project on GitHub (Source Code)</a>
 
     </div>
 
