--- a/mywork.html
+++ b/mywork.html
@@ -258,22 +258,44 @@
                   </div>
                </div>
             </div>
-         <!-- <div class="child">
+            <div class="child">
+                  <div class="wrapper">
+                     <div class="card radius shadowDepth1">
+                        <div class="card__image border-tlr-radius">
+                           <img src="projects/WellingtonTransportation/0039.jpg" alt="Wellington Transportation project" class="border-tlr-radius">
+                        </div>
+                        <div class="card__meta">
+                           <a href="#">Design</a>
+                           <time>2014</time>
+                        </div>
+                        <div class="card__content card__padding">
+                           <div class="card__share">
+                              <a id="share" class="share-toggle share-icon" href="#"></a>
+                           </div>
+                           <article class="card__article">
+                              <h3><a href="#">Wellington Transportation</a></h3>
+                              <p>Designing an ideal solution for Wellingtonians to commute for the border sense. A yearlong project with stakeholders such as On Yer Bikes & Ellmers to develop a transportation medium.</p>
+                           </article>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+         <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <img src="Webimages/conwaysMe.jpeg" alt="Pair programming and leading" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Java</a>
+                        <a href="Conway'sGameofLife.html">Java</a>
                         <time>August 2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <a id="share" class="share-toggle share-icon" href="Conway'sGameofLife.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="#">Conway's Game of Life</a></h3>
+                           <h3><a href="Conway'sGameofLife.html">Conway's Game of Life</a></h3>
                            <p>In team a designing & developing JavaFX application for Conway's Game of Life. Facing challenges with git lab and merge conflicts.</p>
                         </article>
                      </div>
@@ -363,28 +385,6 @@
                         <article class="card__article">
                            <h3><a href="#">Happy Building</a></h3>
                            <p>Happy Building pair programming agile project which enables property owners to request contractors and contact managers for their properties.</p>
-                        </article>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="child">
-               <div class="wrapper">
-                  <div class="card radius shadowDepth1">
-                     <div class="card__image border-tlr-radius">
-                        <img src="ebike2.png" alt="Wellington Transportation project" class="border-tlr-radius">
-                     </div>
-                     <div class="card__meta">
-                        <a href="#">Design</a>
-                        <time>2014</time>
-                     </div>
-                     <div class="card__content card__padding">
-                        <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
-                        </div>
-                        <article class="card__article">
-                           <h3><a href="#">Wellington Transportation</a></h3>
-                           <p>Designing an ideal solution for Wellingtonians to commute. This was a yearlong project with stakeholders such as On Yer Bikes and Ellmers to develop a transportation medium for the border sense</p>
                         </article>
                      </div>
                   </div>
